erDiagram
    EMPRESA{
        int id PK "Solo una fila (id=1)"
        text nombre
        text codigo
        text direccion_postal
        text telefono
        text director_general
        text jefe_rrhh
        text responsable_contabilidad
        text secretario_sindicato
        blob logotipo
    }

    PROVEEDORES{
        int id PK
        text nombre
        text tipo_servicio
        text direccion
        text telefono
        text email_contacto
        text nombre_responsable
    }

    CLIENTES{
        int id PK
        text nombre
        text apellidos
        text numero_documento UK
        text direccion
        text telefono
        text email
        text detalles_eventos_anteriores
        boolean trato_preferencial
    }

    EVENTOS{
        int id PK
        text nombre_evento
        text tipo_evento
        datetime fecha_hora_inicio
        datetime fecha_hora_fin
        text ubicacion
        int numero_invitados
        text temas_decoracion
    }

    SERVICIOS_PRODUCTOS{
        int id PK
        text codigo UK
        text nombre
        text descripcion
        text categoria
        real precio_unitario
        boolean es_terceros
        int proveedor_id FK
    }

    EMPLEADOS{
        int id PK
        text nombre
        text apellidos
        text numero_documento UK
        text direccion
        text telefono
        text email
        text cargo
        text departamento
        text responsabilidades_evento
    }

    CONTRATOS{
        int id PK
        text numero_contrato UK
        int cliente_id FK
        int evento_id FK
        date fecha_contrato
        real precio_total_negociado
        text cronograma_pagos
        text terminos_condiciones
    }

    CONTRATO_SERVICIOS{
        int id PK
        int contrato_id FK
        int servicio_producto_id FK
        int cantidad
        real precio_negociado
    }

    EMPLEADO_EVENTO{
        int id PK
        int empleado_id FK
        int evento_id FK
        text responsabilidad_especifica
    }

    HISTORIAL_CONTRATO{
        int id PK
        int contrato_id FK
        datetime fecha_modificacion
        text descripcion_modificacion
    }

    PAGOS_PLAN{
        int id PK
        int contrato_id FK
        date fecha_programada
        real monto
        text estado
    }

    PROVEEDORES ||--o{ SERVICIOS_PRODUCTOS : "provee"
    CLIENTES ||--o{ CONTRATOS : "firma"
    EVENTOS ||--o{ CONTRATOS : "tiene"
    CONTRATOS ||--o{ CONTRATO_SERVICIOS : "contiene"
    SERVICIOS_PRODUCTOS ||--o{ CONTRATO_SERVICIOS : "incluido en"
    EMPLEADOS ||--o{ EMPLEADO_EVENTO : "asignado a"
    EVENTOS ||--o{ EMPLEADO_EVENTO : "participa"
    CONTRATOS ||--o{ HISTORIAL_CONTRATO : "modificaciones"
    CONTRATOS ||--o{ PAGOS_PLAN : "plan de pagos"